Sun May 30 02:21:34 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/zlib/zlib.c (zstream_append_input2): add RB_GC_GUARD.
	  This caused failure when test/csv is executed with GC.stress = true.

Sun May 30 00:02:39 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* gc.c (force_chain_object, rb_objspace_call_finalizer): delete
	  finalizer entry after corresponding finalizer is executed.
	  This caused SEGV when test/cgi is executed with GC.stress = true.

Sat May 29 23:30:33 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* string.c (str_replace_shared): change embedded state atomically.
	  [ruby-core:29953] [ruby-dev:41456]

Fri May 28 00:32:25 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* insns.def (invokesuper): check consistency between class of self and
	  class of method being invoked by super.  This is temporary measure
	  for YARV.  See [ruby-core:30313] in detail.  See [ruby-dev:40959]
	  [ruby-dev:39772] [ruby-core:27000] [ruby-core:27230]

	* vm_insnhelper.c (vm_search_superclass): ditto.

Thu May 27 12:42:23 2010  Akinori MUSHA  <knu@iDaemons.org>

	* LGPL: Removed.  We no longer have LGPL'd source files in our
	  tree.

Wed May 26 18:40:23 2010  Masaya Tarui  <tarui@ruby-lang.org>

	* test/rinda/test_rinda.rb (TupleSpaceTest, TupleSpaceProxyTest):
	  kill a used thread at teardown.  [ruby-dev:41397]

Wed May 26 11:50:09 2010  Eric Hodel  <drbrain@segment7.net>

	* marshal.c (Init_marshal): document marshal_dump and marshal_load.

Mon May 24 23:04:41 2010  Tanaka Akira  <akr@fsij.org>

	* error.c: fix wrong exception class name in rdoc.

Sat May 29 13:55:22 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (rb_filesystem_encindex): avoid infinite require
	  loop. [ruby-core:30467]

Sat May 29 12:05:51 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/rdoc.rb (RDoc#read_file_contents): take care of BOM.
	  [ruby-dev:41452]

Sat May 29 09:34:32 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/envutil.rb: fix for --disable-gems.
